# pr-impact

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run_tests.py
app/: config.py  main.py
app/analysis/: blast_radius.py  cache.py  config.py  coupling.py  cycles.py  diff.py  pipeline.py  risk.py  violations.py
app/github/: auth.py  client.py  webhooks.py
app/renderer/: markdown.py
app/renderer/templates/: blast_radius.md.j2  comment.md.j2  violations.md.j2
app/workers/: analyzer.py  queue.py
engine/: __init__.py  adapter.py  churn.py  graph.py  parsers.py
tests/: conftest.py  test_blast_radius.py  test_config.py  test_coupling.py  test_cycles.py  test_diff.py  test_pipeline_integration.py  test_renderer.py  test_renderer_marker.py  test_risk.py  test_risk_cycles.py  test_violations.py  test_webhooks.py  test_webhooks_fail_closed.py
